--- a/.github/workflows/corn.yml
+++ b/.github/workflows/corn.yml
@@ -1,21 +1,14 @@
 name: daily-report
 
 on:
-  # schedule:
-  #   - cron: '*/5 * * * *'
+  schedule:
+   - cron: '*/1 * * * *'
   workflow_dispatch:
 
 jobs:
-  build:
+  my-job:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-      # - name: Run email code
-      #   env:
-      #     USER_EMAIL: ${{ secrets.USER_EMAIL }}
-      #     USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
-      #   run: python send_email.py
+      - name: first-step
+        run: echo "hello world"
 
