--- a/.github/workflows/corn.yml
+++ b/.github/workflows/corn.yml
@@ -1,14 +1,34 @@
+# name: daily-report
+
+# on:
+#   schedule:
+#    - cron: '0 2,14 * * *'
+#   workflow_dispatch:
+
+# jobs:
+#   my-job:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: first-step
+#         run: echo "hello world"
+
 name: daily-report
 
 on:
   schedule:
-   - cron: '0 2,14 * * *'
+    - cron: '10 16,4 * * *'
+      timezone: Europe/Berlin
   workflow_dispatch:
 
 jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
+      - name: Set timezone
+        uses: szenius/set-timezone@v1.2
+        with:
+          timezoneLinux: "CET"
+          timezoneMacos: "CET"
+          timezoneWindows: "Central European Standard Time"
       - name: first-step
         run: echo "hello world"
-
